# dbt-study

./: .dockerignore  .env.example  .flake8  .gitignore  .mcp.json.example  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dbt_project/: dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt_project/models/dwh/: _dwh__models.yml  dwh_dim_customers.sql  dwh_fct_orders.sql
dbt_project/models/lake/: _lake__models.yml  _lake__sources.yml  lake_customers.sql  lake_orders.sql  lake_payments.sql
dbt_project/models/mart/: _mart__models.yml  mart_customer_summary.sql  mart_monthly_revenue.sql
dbt_project/models/staging/: _staging__models.yml  stg_customers.sql  stg_orders.sql  stg_payments.sql
dbt_project/seeds/: _seeds__models.yml  raw_customers.csv  raw_orders.csv  raw_payments.csv
